[gd_scene load_steps=4 format=3 uid="uid://bah2p5efhcjtx"]

[ext_resource type="Script" path="res://Scenes and Scripts/Scenes/Player/Inventory/InventoryDropable_SCRIPT.gd" id="1_opaah"]
[ext_resource type="Theme" uid="uid://ceasxu5q233w7" path="res://Resources/Styles and Themes/Themes/Default.tres" id="2_qromc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgv10"]
size = Vector2(75, 75)

[node name="Dropable" type="Node2D"]
script = ExtResource("1_opaah")

[node name="MouseOverTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.17, 0.17)

[node name="Area2D" type="Area2D" parent="." groups=["draggable"]]
collision_priority = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_mgv10")

[node name="ITEM_TYPE" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -59.5
offset_right = 39.0
offset_bottom = -36.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qromc")
theme_override_font_sizes/font_size = 10
text = "ITEM_TYPE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="z_index" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0.529412)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -69.5
offset_right = 39.0
offset_bottom = -46.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qromc")
theme_override_font_sizes/font_size = 10
text = "z_index = 0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
